--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -1,5 +1,14 @@
 /* Sticky footer styles
 -------------------------------------------------- */
+
+html, body {
+  background: url(../img/idea2.gif) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 html {
   position: relative;
   min-height: 100%;
@@ -7,6 +16,9 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  font-size: 18px;
+  color: #fff;
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 .footer {
   position: absolute;
@@ -14,9 +26,25 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
-  background-color: #f5f5f5;
+  background-color: rgba(0,0,0,0.8);
+  color: #9d9d9d;
 }
 
+.main {
+  position: absolute;
+  bottom: 60px;
+  width: 100%;
+}
+
+
+.navbar {
+  background-color: rgba(0,0,0,0.8);
+  color: #9d9d9d;
+}
+
+.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
+  color: white;
+}
 
 /* Custom page CSS
 -------------------------------------------------- */
@@ -36,4 +64,16 @@ body > .container {
 
 code {
   font-size: 80%;
+}
+
+
+
+/* Custom default button */
+.btn-default,
+.btn-default:hover,
+.btn-default:focus {
+  color: #333;
+  text-shadow: none; /* Prevent inheritance from `body` */
+  background-color: #fff;
+  border: 1px solid #fff;
 }
