--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -32,7 +32,7 @@ body {
 
 .main {
   position: absolute;
-  bottom: 60px;
+  bottom: 6em;
   width: 100%;
 }
 
@@ -40,6 +40,7 @@ body {
 .navbar {
   background-color: rgba(0,0,0,0.8);
   color: #9d9d9d;
+  border-bottom: none;
 }
 
 .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
