--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -31,9 +31,8 @@ body {
 }
 
 .main {
-  position: absolute;
-  bottom: 6em;
   width: 100%;
+  margin-top: 10em;
 }
 
 
@@ -77,4 +76,13 @@ code {
   text-shadow: none; /* Prevent inheritance from `body` */
   background-color: #fff;
   border: 1px solid #fff;
+}
+
+
+@media only screen and (min-width: 768px) {
+  .main {
+    margin-top: 0;
+    position: absolute;
+    bottom: 6em;
+  }
 }
