--- a/css/prosopo.css
+++ b/css/prosopo.css
@@ -36,7 +36,7 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 .full {
 	/* CHANGE THE URL TO CHANGE THE BACKGROUND PHOTO */
-	background: url('../img/idea2.gif') no-repeat ; /* center center fixed*/
+	background: url('../img/background-desktop.gif') no-repeat ; /* center center fixed*/
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
