--- a/css/sticky-footer-navbar.css
+++ b/css/sticky-footer-navbar.css
@@ -2,11 +2,7 @@
 -------------------------------------------------- */
 
 html, body {
-  background: url(../img/idea2.gif) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: url(../img/background-small.gif) repeat-y center center fixed;
 }
 
 html {
@@ -32,7 +28,7 @@ body {
 
 .main {
   width: 100%;
-  margin-top: 10em;
+  margin-top: 5em;
 }
 
 
@@ -84,5 +80,13 @@ code {
     margin-top: 0;
     position: absolute;
     bottom: 6em;
+  }
+
+  html, body {
+    background: url(../img/background-desktop.gif) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
 }
