--- a/css/marcobehler.css
+++ b/css/marcobehler.css
@@ -2,7 +2,7 @@
 -------------------------------------------------- */
 
 html, body {
-    background: url(../img/background-small.gif) repeat-y center center fixed;
+    background: url(../img/background-small-2.png) repeat-y center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
